--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -139,6 +139,18 @@
     display: inline-block;
 }
 
+#home-community-list .community-report-title {
+    background-image: linear-gradient(90deg, var(--secondary-color) 0%, var(--primary-color) 100%);
+    background-size: 0% 2px;
+    background-repeat: no-repeat;
+    background-position: left 100%;
+    transition: background-size 0.3s ease;
+}
+
+#home-community-list .news-card:hover .community-report-title {
+    background-size: 100% 2px;
+}
+
 .news-card:hover .news-title a {
     background-size: 100% 2px;
     color: white; /* Ensure text stays white */
